# LightYearsGame-C

./: CMakeCache.txt  CMakeLists.txt
LightYearsEngine/: CmakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Object.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Object.cpp  World.cpp
LightYearsGame/: CmakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
